--- a/autodous_base/templates/index.html
+++ b/autodous_base/templates/index.html
@@ -1,9 +1,79 @@
 <html>
-<head><title></title></head>
+<head>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.1.8/semantic.min.css">
+    <title>{{ title }}</title>
+</head>
 
 <body>
+<div class="ui grid">
+    <div class="four wide column">
+        <div class="ui horizontal  statistics">
+            <div class="statistic">
+                <div class="value">
+                    22
+                </div>
+                <div class="label">
+                    Saves
+                </div>
+            </div>
+            <div class="statistic">
+                <div class="text value">
+                    Three<br>
+                    Thousand
+                </div>
+                <div class="label">
+                    Signups
+                </div>
+            </div>
+            <div class="statistic">
+                <div class="value">
+                    <i class="plane icon"></i> 5
+                </div>
+                <div class="label">
+                    Flights
+                </div>
+            </div>
+            <div class="statistic">
+                <div class="value">
+                    <img src="http://findicons.com/files/icons/1072/face_avatars/300/a02.png" class="ui circular inline image">
+                    42
+                </div>
+                <div class="label">
+                    Team Members
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="four wide column">
+        <div class="ui middle aligned selection list">
+            <div class="item">
+                <div class="content">
+                    <div class="header">Helen</div>
+                </div>
+            </div>
+            <div class="item">
+                <div class="content">
+                    <div class="header">Christian</div>
+                </div>
+            </div>
+            <div class="item">
+                <div class="content">
+                    <div class="header">Daniel</div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="four wide column">3</div>
+    <div class="four wide column">4</div>
+    <div class="two wide column">5</div>
+    <div class="eight wide column">6</div>
+    <div class="six wide column">7</div>
+</div>
+{{ title }}
 
-{{ content }}
+<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.1.8/semantic.min.js" integrity="sha384-TliAZkItG4hQmzQ3fkO1b36T+hwLupO3uILrCgAR7XSMAgdPEbQFoE0sCUWKqKMh" crossorigin="anonymous"></script>
+<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.2/angular.min.js" crossorigin="anonymous"></script>
+<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.2/angular.min.js.map" crossorigin="anonymous"></script>
 
 </body>
 </html>
