--- a/autodous_base/templates/index.html
+++ b/autodous_base/templates/index.html
@@ -1,82 +1,64 @@
 <html>
 <head>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.1.8/semantic.min.css">
+    <link href="//cdnjs.cloudflare.com/ajax/libs/bootswatch/3.3.6/yeti/bootstrap.css" rel="stylesheet" crossorigin="anonymous">
     <title>{{ title }}</title>
 </head>
 
 <body>
-{{request.user.is_authenticated}}
+    <div class="page-header">
+        <h1>autodo.us <small>todos for procrastinators</small></h1>
+    </div>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-md-4">
+            <h1>Books</h1>
 
-{% url 'account_login' %}
-<div class="ui grid">
-    <div class="four wide column">
-        <div class="ui horizontal  statistics">
-            <div class="statistic">
-                <div class="value">
-                    22
-                </div>
-                <div class="label">
-                    Saves
-                </div>
-            </div>
-            <div class="statistic">
-                <div class="text value">
-                    Three<br>
-                    Thousand
-                </div>
-                <div class="label">
-                    Signups
-                </div>
-            </div>
-            <div class="statistic">
-                <div class="value">
-                    <i class="plane icon"></i> 5
-                </div>
-                <div class="label">
-                    Flights
+
+            <div class="list-group">
+                <div href="#" class="list-group-item clearfix">
+                    <h4 class="list-group-item-heading">
+                        <a href="#">SwissRe 04-2016</a>
+                    </h4>
+                    <div class="list-group-item-text">
+                        <a href="">23 todos</a>,
+                        <a href="">3 tags</a>,
+                        <a href="">10 person</a> &amp;
+                        <a href="">2323 hrs</a>
+                    </div>
+                    <div class="pull-right">
+                        <div class="btn-group">
+                            <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                Active <span class="caret"></span>
+                            </button>
+                            <ul class="dropdown-menu">
+                                <li><a href="#">Close book</a></li>
+                            </ul>
+                        </div>
+                    </div>
                 </div>
             </div>
-            <div class="statistic">
-                <div class="value">
-                    <img src="http://findicons.com/files/icons/1072/face_avatars/300/a02.png" class="ui circular inline image">
-                    42
-                </div>
-                <div class="label">
-                    Team Members
-                </div>
+
+            <div class="input-group">
+                <input type="text" class="form-control" placeholder="Add a new book...">
+                <span class="input-group-btn">
+                        <button class="btn btn-default" type="button">Add</button>
+                    </span>
             </div>
+
+
+
+
         </div>
+
     </div>
-    <div class="four wide column">
-        <div class="ui middle aligned selection list">
-            <div class="item">
-                <div class="content">
-                    <div class="header">Helen</div>
-                </div>
-            </div>
-            <div class="item">
-                <div class="content">
-                    <div class="header">Christian</div>
-                </div>
-            </div>
-            <div class="item">
-                <div class="content">
-                    <div class="header">Daniel</div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="four wide column">3</div>
-    <div class="four wide column">4</div>
-    <div class="two wide column">5</div>
-    <div class="eight wide column">6</div>
-    <div class="six wide column">7</div>
 </div>
-{{ title }}
+    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.2/angular.min.js" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.2/angular.min.js.map" crossorigin="anonymous"></script>
+    {{request.user.is_authenticated}}
+    {{request.url}}
 
-<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.1.8/semantic.min.js" integrity="sha384-TliAZkItG4hQmzQ3fkO1b36T+hwLupO3uILrCgAR7XSMAgdPEbQFoE0sCUWKqKMh" crossorigin="anonymous"></script>
-<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.2/angular.min.js" crossorigin="anonymous"></script>
-<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.2/angular.min.js.map" crossorigin="anonymous"></script>
-
+    {{ title }}
 </body>
 </html>
