--- a/autodous_base/templates/index.html
+++ b/autodous_base/templates/index.html
@@ -5,53 +5,57 @@
 </head>
 
 <body>
-    <div class="page-header">
-        <h1>autodo.us <small>todos for procrastinators</small></h1>
+    <div class="container-fluid">
+        <div class="page-header">
+            <h1>
+                autodo.us <small>todos for procrastinators</small>
+            </h1>
+        </div>
     </div>
-<div class="container-fluid">
-    <div class="row">
-        <div class="col-md-4">
-            <h1>Books</h1>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-md-4">
+                <h1>Books</h1>
 
 
-            <div class="list-group">
-                <div href="#" class="list-group-item clearfix">
-                    <h4 class="list-group-item-heading">
-                        <a href="#">SwissRe 04-2016</a>
-                    </h4>
-                    <div class="list-group-item-text">
-                        <a href="">23 todos</a>,
-                        <a href="">3 tags</a>,
-                        <a href="">10 person</a> &amp;
-                        <a href="">2323 hrs</a>
-                    </div>
-                    <div class="pull-right">
-                        <div class="btn-group">
-                            <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                Active <span class="caret"></span>
-                            </button>
-                            <ul class="dropdown-menu">
-                                <li><a href="#">Close book</a></li>
-                            </ul>
+                <div class="list-group">
+                    <div href="#" class="list-group-item clearfix">
+                        <h4 class="list-group-item-heading">
+                            <a href="#">SwissRe 04-2016</a>
+                        </h4>
+                        <div class="list-group-item-text">
+                            <a href="">23 todos</a>,
+                            <a href="">3 tags</a>,
+                            <a href="">10 person</a> &amp;
+                            <a href="">2323 hrs</a>
+                        </div>
+                        <div class="pull-right">
+                            <div class="btn-group">
+                                <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                    Active <span class="caret"></span>
+                                </button>
+                                <ul class="dropdown-menu">
+                                    <li><a href="#">Close book</a></li>
+                                </ul>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
 
-            <div class="input-group">
-                <input type="text" class="form-control" placeholder="Add a new book...">
-                <span class="input-group-btn">
+                <div class="input-group">
+                    <input type="text" class="form-control" placeholder="Add a new book...">
+                    <span class="input-group-btn">
                         <button class="btn btn-default" type="button">Add</button>
                     </span>
+                </div>
+
+
+
+
             </div>
 
-
-
-
         </div>
-
     </div>
-</div>
     <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
     <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.2/angular.min.js" crossorigin="anonymous"></script>
