fixed quite a few issues

--- a/autodous_base/templates/index.html
+++ b/autodous_base/templates/index.html
@@ -16,8 +16,6 @@
         <div class="row">
             <div class="col-md-4">
                 <h1>Books</h1>
-
-
                 <div class="list-group">
                     <div href="#" class="list-group-item clearfix">
                         <h4 class="list-group-item-heading">
@@ -58,8 +56,9 @@
     </div>
     <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.2/angular.min.js" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.2/angular.min.js.map" crossorigin="anonymous"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.3/angular.js" crossorigin="anonymous"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.3/angular-route.js" crossorigin="anonymous"></script>
+    
     {{request.user.is_authenticated}}
     {{request.url}}
 
